--- a/storage/themes/boulevard/inc/header-icons.html
+++ b/storage/themes/boulevard/inc/header-icons.html
@@ -4,5 +4,6 @@
 		<koken:not empty="profile.twitter"><a href="http://twitter.com/{{ profile.twitter }}" title="Twitter"><i class="kicon-share-twitter"></i></a></koken:not>
 		<koken:not empty="profile.facebook"><a href="{{ profile.facebook }}" title="Facebook"><i class="kicon-share-facebook"></i></a></koken:not>
 		<koken:not empty="profile.google_plus"><a href="{{ profile.google_plus }}" title="Google+"><i class="kicon-share-gplus"></i></a></koken:not>
+        <a href="http://au.linkedin.com/in/emilkjer/" title="Linkedin+"><i class="icon-linkedin"></i></a>
 	</div>
 </koken:if>
