--- a/storage/themes/boulevard/inc/head.html
+++ b/storage/themes/boulevard/inc/head.html
@@ -7,6 +7,15 @@
 	<meta name="author" content="{{ site.title }}" />
 	<meta name="keywords" content="{{ site.keywords }}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<div id="fb-root"></div>
+
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/da_DK/all.js#xfbml=1&appId=470817062997791";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
 	<koken:title />
 
